	PR driver/30246 	* gcc.c (cpp_unique_options): Any of -ggdb3, -gstabs3, 	-gcoff3, -gxcoff3, -gvms3 implies -dD.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121549 138bc75d-0d04-0410-961f-82ee72b054a4